--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -23,6 +23,7 @@
     font-size: 40px;
 }
 
+
 .section-1 .container .header nav button {
     width: 192px;
     height: 48px;
@@ -33,6 +34,11 @@
     cursor: pointer;
     color: #fff;
 }
+
+
+/* .section-1 .container .header nav button.btn-menu {
+    display: none;
+} */
 
 .section-1 .container .header nav button:nth-child(1) {
     background-color: transparent;
@@ -137,35 +143,41 @@
 }
 
 .section-3 .container .categories-container {
-    height: 52vh;
+    height: 26vh;
     display: flex;
     justify-content: space-between;
 }
 
 
-.section-3 .container .categories-container .category-card{
-    width: 340px;
-    height: 100px;
-    border-radius: 4px;
-    background-color: #fcfcfc;
-    display: flex;
+/* Tela < 1130*/
+
+@media ( max-width: 1130px){
+    .section-1 .container main section:nth-child(1) h1 {
+        font-size: 48px;
+        line-height: 48px;
+    }
+
+    .section-1 .container main section:nth-child(2){
+        max-width:500px;
+    }
+
 }
 
-.section-3 .container .categories-container .category-card-image{
-    width: 92px;
-    height: 100px;
-    border-radius: 4px 0px 0px 0px;
-    background-color: red;
-}
 
-.section-3 .container .categories-container .category-card .category-card-content{
-    width: 248px;
-    padding: 16px;
-}
+@media ( max-width: 1077px){
+    
 
-.section-3 .container .categories-container .category-card .category-card-content p{
-    margin-top: 32px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #494949;
+    /* .section-1 .container main section:nth-child(2) img{ max-width:200px;    } */
+    .section-1 .container main section:nth-child(1){
+        max-width:100%;
+        align-items: center; 
+        padding: 16vh 0;
+    }
+
+    .section-1 .container main section:nth-child(1) h1{
+        text-align: center;
+
+    }
+
+
 }
