--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -5,12 +5,12 @@
     opacity: 90%;
 }
 
-.section-1 .container {
+.section-1 .box {
     max-width: 1264px;
     margin: 0 auto;
 }
 
-.section-1 .container .header {
+.section-1 .box .header {
     height: 16vh;
     display: flex;
     justify-content: space-between;
@@ -18,13 +18,12 @@
     padding: 0 32px;
 }
 
-.section-1 .container .header h2 {
+.section-1 .box .header h2 {
     color: #fff;
     font-size: 40px;
 }
 
-
-.section-1 .container .header nav button {
+.section-1 .box .header nav button {
     width: 192px;
     height: 48px;
     border-radius: 32px;
@@ -35,66 +34,65 @@
     color: #fff;
 }
 
-
-.section-1 .container .header nav button.btn-menu {
+.section-1 .box .header nav button.btn-menu {
     display: none;
 }
 
-.section-1 .container .header nav button:nth-child(1) {
+.section-1 .box .header nav button:nth-child(1) {
     background-color: transparent;
     border: 2px solid #fff !important;
     margin-right: 8px;
 }
 
-.section-1 .container .header nav button:nth-child(2) {
+.section-1 .box .header nav button:nth-child(2) {
     background-color: rgba(89, 254, 155, 0.9);
 }
 
-.section-1 .container main {
+.section-1 .box main {
     display: flex;
     height: 72vh;
 }
 
-.section-1 .container main section {
+.section-1 .box main section {
     width: 50%;
 }
 
-.section-1 .container main section:nth-child(1) {
+.section-1 .box main section:nth-child(1) {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 21vh 0 0 32px;
 }
 
-.section-1 .container main section:nth-child(1) h1 {
+.section-1 .box main section:nth-child(1) h1 {
     font-size: 56px;
     line-height: 56px;
     color: #fff;
 }
 
-.section-1 .container main section:nth-child(1) img { 
+.section-1 .box main section:nth-child(1) img { 
     margin-top: 24px;
 }
 
-.section-1 .container main section:nth-child(1) p { 
+.section-1 .box main section:nth-child(1) p { 
     margin-top: 24px;
     color: #fff;
     font-size: 18px;
 }
 
-.section-1 .container main section:nth-child(2) {
+.section-1 .box main section:nth-child(2) {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
 }
 
-.section-2{
+.section-2 {
     width: 100%;
     height: 80vh;
-    background:#fcfcfc;
+    background-color: #fcfcfc;
 }
 
-.section-2 .container{
+.section-2 .box {
     max-width: 1264px;
     height: 80vh;
     margin: 0 auto;
@@ -105,24 +103,24 @@
     align-items: center;
 }
 
-.section-2 .container h2{
+.section-2 .box h2 {
     font-size: 40px;
     text-align: center;
-    color: #3a3a3a;
+    color: #3A3A3A;
     margin-top: 64px;
 }
 
-.section-2 .container p{
+.section-2 .box p {
     font-size: 18px;
 }
 
-.section-2 .container .card-container{
+.section-2 .box .card-container {
     display: flex;
     width: 70%;
     justify-content: space-between;
 }
 
-.section-2 .container button{
+.section-2 .box button {
     width: 320px;
     height: 48px;
     border-radius: 32px;
@@ -135,105 +133,175 @@
     margin-bottom: 64px;
 }
 
-
-.section-3{
+.section-3 {
     width: 100%;
     height: 80vh;
-    background-image: linear-gradient(to right, #1c83f6, #0f23da);
+    background-image: linear-gradient(to right, #1c83f6, #0F23DA);
     opacity: 90%;
 }
 
-.section-3 .container{
-        max-width: 1264px;
-        height: 80vh;
-        margin: 0 auto;
-        padding: 0 32px;
+.section-3 .box {
+    max-width: 1264px;
+    height: 80vh;
+    margin: 0 auto;
+    padding: 0 32px;
 }
 
-.section-3 .container h2{
+.section-3 .box h2 {
     font-size: 40px;
-    color:#fcfcfc;
+    color: #fcfcfc;
     height: 28vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-.section-3 .container .categories-container {
+.section-3 .box .categories-container {
     height: 52vh;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
+.section-4 {
+    width: 100%;
+    height: 80vh;
+    background-color: #fcfcfc;
+    opacity: 90%;
+    display: flex;
+    align-items: center;
+}
 
-/* Tela < 1130 ou o máximo de largura que pode ter é 1130*/
+.section-4 .box {
+    max-width: 1264px;
+    height: 64vh;
+    margin: 0 auto;
+    padding: 0 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
-@media ( max-width: 1130px){
-    .section-1 .container main section:nth-child(1) h1 {
+.section-4 .box h2 {
+    font-size: 40px;
+    text-align: center;
+    color: #3A3A3A;
+}
+
+.image-review {
+    display: flex;
+    justify-content: center;
+}
+
+.image-review img {
+    width: 300px;
+}
+
+.review {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 600px;
+    margin: 0 auto;
+}
+
+.user-review h4 {
+    text-align: center;
+    font-size: 20px;
+}
+
+footer {
+    background-color: #ececec;
+}
+
+footer .box {
+    max-width: 1264px;
+    margin: 0 auto;
+    padding: 8px 32px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Tela < 1130px largura || Tela < 1130 ou o máximo de largura que pode ter é 1130 */
+@media (max-width: 1130px) {
+    .section-1 .box main section:nth-child(1) h1 {
         font-size: 48px;
         line-height: 48px;
     }
 
-    .section-1 .container main section:nth-child(2) img {
+    .section-1 .box main section:nth-child(2) img {
         width: 500px;
     }
 
-    
-    .section-2 .container .card-container {
+    .section-2 .box .card-container {
         width: 90%;
     }
 }
 
-
-@media ( max-width: 1077px){
-
-    .section-1 .container .header {
+@media (max-width: 1077px) {
+    .section-1 .box .header {
         padding: 0 16px;
     }
 
-    .section-1 .container .header nav button { 
+    .section-1 .box .header nav button { 
         display: none;
     }
 
-    .section-1 .container .header nav button.btn-menu {
+    .section-1 .box .header nav button.btn-menu {
         display: inline-block;
         background-color: rgba(89, 254, 155, 0.9);
         width: 56px;
         height: 56px;
         border-radius: 4px;
     }
-    
-    .fa-bars{
+
+    .fa-bars {
         font-size: 22px !important;
     }
 
-    .section-1 .container main section:nth-child(1){
-        width:100%;
-        align-items: center; 
+    .section-1 .box main section:nth-child(1) {
+        width: 100%;
+        align-items: center;
         padding: 16vh 16px;
-    }
+     }
 
-    .section-1 .container main section:nth-child(2) h1 {
+     .section-1 .box main section:nth-child(1) h1 {
         text-align: center;
         font-size: 38px;
+     }
 
-    }
-
-    .section-1 .container main section:nth-child(2) p {
+     .section-1 .box main section:nth-child(1) p {
         text-align: center;
-    }
+     }
 
-    .section-1 .container main section:nth-child(2){
+     .section-1 .box main section:nth-child(2) {
         width: 0%;
+     }
 
+    .section-1 .box main section:nth-child(2) img {
+       display: none;
     }
-
-     .section-1 .container main section:nth-child(2) img{
-         display:none;
-    }
-
 }
 
 @media (max-width: 992px) {
@@ -241,63 +309,61 @@
         height: 172vh;
     }
 
-    .section-2 .container {
+    .section-2 .box {
         height: 172vh;
     }
 
-    .section-2 .container h2 {
+    .section-2 .box h2 {
         font-size: 38px;
     }
 
-    .section-2 .container .card-container {
+    .section-2 .box .card-container {
         flex-direction: column;
     }
 
-
-    .section-2 .container .card-container article {
+    .section-2 .box .card-container article {
         text-align: center;
         margin-top: 32px;
     }
 }
 
-
-
 @media (max-width: 382px) {
-    .section-1 .container main section:nth-child(1) h1 {
+    .section-1 .box main section:nth-child(1) h1 {
         text-align: center;
         font-size: 32px;
     }
 
-
-    .section-1 .container main section:nth-child(1) img { 
+    .section-1 .box main section:nth-child(1) img { 
         width: 300px;
     }
 
-    .section-1 .container main section:nth-child(1) p {
+    .section-1 .box main section:nth-child(1) p {
         text-align: center;
         font-size: 16px;
     }
 
-    .section-2 .container h2 {
+    .section-2 .box h2 {
         font-size: 32px;
         margin-bottom: 32px;
     }
     
-    .section-2 .container .card-container {
+    .section-2 .box .card-container {
         width: 100%;
     }
 
-
-    .section-2 .container .card-container article {
+    .section-2 .box .card-container article {
         padding: 0;
     }
 
-    .section-2 .container .card-container article img {
+    .section-2 .box .card-container article img {
         width: 100%;
     }
 
-
-    .section-2 .container button {
+    .section-2 .box button {
         margin-top: 32px;
     }
 }
+
+
+
+
